--- a/Electric_billing_system/Electric_billing_system/Electric_billing_system.csproj
+++ b/Electric_billing_system/Electric_billing_system/Electric_billing_system.csproj
@@ -60,8 +60,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\app\Mohamed\product\11.2.0\dbhome_1\ODP.NET\bin\2.x\Oracle.DataAccess.dll</HintPath>
     </Reference>
-    <Reference Include="Siticone.UI">
-      <HintPath>D:\Self-Diagnosis-Sp-main\Siticone.UI.dll</HintPath>
+    <Reference Include="Siticone.Desktop.UI, Version=2.1.1.0, Culture=neutral, PublicKeyToken=9683591576b7f0b4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Siticone.Desktop.UI.2.1.1\lib\net40\Siticone.Desktop.UI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -114,6 +114,36 @@
     <Compile Include="Admin\PowerHouse\ViewPH.designer.cs">
       <DependentUpon>ViewPH.cs</DependentUpon>
     </Compile>
+    <Compile Include="Change Account Information\Account_Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Change Account Information\Account_Settings.Designer.cs">
+      <DependentUpon>Account_Settings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Change Account Information\Camera_winform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Change Account Information\Camera_winform.Designer.cs">
+      <DependentUpon>Camera_winform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Change Account Information\ForgotPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Change Account Information\ForgotPassword.Designer.cs">
+      <DependentUpon>ForgotPassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Change Account Information\Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Change Account Information\Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Change Account Information\Two_Step.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Change Account Information\Two_Step.Designer.cs">
+      <DependentUpon>Two_Step.cs</DependentUpon>
+    </Compile>
     <Compile Include="Customer\Customer_Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +173,11 @@
     </Compile>
     <Compile Include="Admin\Bills\CreateBill.designer.cs">
       <DependentUpon>CreateBill.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Welcome_Form.cs">
       <SubType>Form</SubType>
@@ -176,6 +211,18 @@
     <EmbeddedResource Include="Admin\PowerHouse\ViewPH.resx">
       <DependentUpon>ViewPH.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Change Account Information\Account_Settings.resx">
+      <DependentUpon>Account_Settings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Change Account Information\ForgotPassword.resx">
+      <DependentUpon>ForgotPassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Change Account Information\Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Change Account Information\Two_Step.resx">
+      <DependentUpon>Two_Step.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Customer\Customer_Login.resx">
       <DependentUpon>Customer_Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -199,13 +246,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -222,6 +266,24 @@
   <ItemGroup>
     <Folder Include="Admin\Edit Customer\" />
     <Folder Include="System\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Avatar_white.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Security_white.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Notification_white.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\exit_sign_white.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bookmark_white.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dark_gif2.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
